--- a/infrastructure/parallelcluster-ui.yaml
+++ b/infrastructure/parallelcluster-ui.yaml
@@ -7,6 +7,18 @@ Parameters:
     Description: When specified, the URI of the Docker image for the Lambda of the ParallelCluster UI container
     Type: String
     Default: public.ecr.aws/pcm/parallelcluster-ui:2023.06.0
+  VpcEndpointId:
+    Description: Enter a VPC endpoint to enable private PCUI implementation. When enabled, the API will only accept requests from within the given VPC.
+    Type: String
+    Default: ''
+  LambdaSubnetIds:
+    Description: Comma separated list of subnet IDs to be associated with the PCUI Lambda function. These subnets should be private and associated with your VPC endpoint.
+    Type: CommaDelimitedList
+    Default: ''
+  LambdaSecurityGroupIds:
+    Description: Comma separated list of security groups to be associated with the PCUI Lambda function.
+    Type: CommaDelimitedList
+    Default: ''
   UserPoolId:
     Description: UserPoolId of a previously deployed PCUI Cognito User Pool. Leave blank to create a new one.
     Type: String
@@ -48,6 +60,12 @@ Metadata:
         Parameters:
           - PublicEcrImageUri
       - Label:
+          default: (Optional) Private PCUI
+        Parameters:
+          - VpcEndpointId
+          - LambdaSubnetIds
+          - LambdaSecurityGroupIds
+      - Label:
           default: (Optional) External PCUI Cognito
         Parameters:
           - UserPoolId
@@ -82,6 +100,7 @@ Conditions:
     Fn::And:
       - !Not [!Equals [!Ref ImageBuilderVpcId, ""]]
       - !Not [!Equals [!Ref ImageBuilderSubnetId, ""]]
+  IsPrivate: !Not [!Equals [!Ref VpcEndpointId, ""]]
   HasDefaultInfrastructure: !Equals [!Ref InfrastructureBucket, '']
   UseExistingCognito:
     !And
@@ -133,6 +152,7 @@ Resources:
         ApiDefinitionS3Uri: !Sub s3://${AWS::Region}-aws-parallelcluster/parallelcluster/${Version}/api/ParallelCluster.openapi.yaml
         CreateApiUserRole: False
         EnableIamAdminAccess: True
+        VpcEndpointId: !If [ IsPrivate, !Ref VpcEndpointId, !Ref AWS::NoValue ]
         ImageBuilderSubnetId: !If
           - UseNonDockerizedPCAPI
           - !Ref AWS::NoValue
@@ -162,6 +182,12 @@ Resources:
           Value: !FindInMap [ ParallelClusterUI, Constants, Version ]
       TracingConfig:
         Mode: Active
+      VpcConfig: 
+        Fn::If:
+          - IsPrivate
+          - SubnetIds: !Ref LambdaSubnetIds
+            SecurityGroupIds: !Ref LambdaSecurityGroupIds
+          - !Ref AWS::NoValue
       Environment:
         Variables:
           API_BASE_URL: !GetAtt [ ParallelClusterApi, Outputs.ParallelClusterApiInvokeUrl ]
@@ -189,6 +215,33 @@ Resources:
     Properties:
       Name: ParallelClusterUI
       Description: ParallelClusterUI Lambda Proxy
+      Policy:
+        Fn::If:
+          - IsPrivate
+          - Version: "2012-10-17"
+            Statement:
+              - Effect: "Deny"
+                Principal: "*"
+                Action: "execute-api:Invoke"
+                Resource: "execute-api:/*"
+                Condition:
+                  StringNotEquals: 
+                    aws:sourceVpce: !Ref VpcEndpointId
+              - Effect: "Allow"
+                Principal: "*"
+                Action: "execute-api:Invoke"
+                Resource: "execute-api:/*"
+          - Version: "2012-10-17"
+            Statement:
+            - Effect: "Allow"
+              Principal: "*"
+              Action: "execute-api:Invoke"
+              Resource: "execute-api:/*"
+      EndpointConfiguration: 
+        Types: 
+          - !If [ IsPrivate, PRIVATE, REGIONAL ]
+        VpcEndpointIds: 
+          - !If [ IsPrivate, !Ref VpcEndpointId, !Ref AWS::NoValue ]
       Tags: 
         - Key: 'parallelcluster:ui:version'
           Value: !FindInMap [ParallelClusterUI, Constants, Version]
@@ -749,6 +802,11 @@ Resources:
             - ec2:DescribeInstanceTypes
             - ec2:DescribeSubnets
             - ec2:DescribeKeyPairs
+            - ec2:DescribeNetworkInterfaces
+            - ec2:CreateNetworkInterface
+            - ec2:DeleteNetworkInterface
+            - ec2:DescribeInstances
+            - ec2:AttachNetworkInterface
             Resource:
               - '*'
             Effect: Allow
